change color link

--- a/scss/helpers/_mixins.scss
+++ b/scss/helpers/_mixins.scss
@@ -9,6 +9,7 @@
 
 $breakpoints: (
   'custom-small-mobile-max': (max-width: 359px),
+  'small-mobile': (max-width: 480px),
   'portrait-mobile-max': (max-width: 575px),
   'mobile-min': (min-width: 576px),
   'mobile-max': (max-width: 767px),
