--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -15,7 +15,7 @@ footer {
     }
 
     @include breakpoint(mobile-max) {
-        margin-top: 100px;
+        margin-top: 30px;
     }
 
     // }
@@ -140,6 +140,8 @@ footer {
 
                 padding-top: 2.5rem;
                 padding-top: 3rem;
+                display: flex;
+                font-family: "Circular-Std-Book";
 
                 @include breakpoint(medium-large-desktop-max) {
                     padding-top: 1rem;
@@ -164,18 +166,31 @@ footer {
                             color: #F2E162;
                         }
 
-                        address {
-                            font-size: 1.8rem;
-                            font-family: $primary-font-family;
-                            font-weight: 400;
-                            max-width: 225px;
-                            margin-bottom: 0;
+                        // address {
+                        //     font-size: 1.8rem;
+                        //     font-family: $primary-font-family;
+                        //     font-weight: 400;
+                        //     max-width: 225px;
+                        //     margin-bottom: 0;
 
-                            @include breakpoint(medium-large-desktop-max) {
-                                font-size: 1.4rem;
-                            }
+                        //     @include breakpoint(medium-large-desktop-max) {
+                        //         font-size: 1.4rem;
+                        //     }
+                        // }
+                    }
+                    address {
+                        font-size: 1.8rem;
+                        font-family: $primary-font-family;
+                        color: #FFFFFF;
+                        font-weight: 400;
+                        max-width: 225px;
+                        margin-bottom: 0;
+
+                        @include breakpoint(medium-large-desktop-max) {
+                            font-size: 1.4rem;
                         }
                     }
+                   
                 }
 
                 &:nth-child(2) {
@@ -235,7 +250,15 @@ footer {
                         &:hover {
                             color: #F2E162;
                         }
-
+                       
+                    }
+                    .support-hotline{
+                        font-size: 1.4rem;
+                        font-family: $primary-font-family;
+                        font-weight: 400;
+                        color: #FFFFFF;
+                        font-family: "Circular-Std-Book";
+                        font-weight: 400;
                     }
 
                     .icon-call {
@@ -317,11 +340,11 @@ footer {
 
                             .icon-facebook {
                                 font-size: 1.6rem;
-                                transition: 0.4s;
-                                -webkit-transition: 0.4s;
-                                -moz-transition: 0.4s;
-                                -ms-transition: 0.4s;
-                                -o-transition: 0.4s;
+                                // transition: 0.4s;
+                                // -webkit-transition: 0.4s;
+                                // -moz-transition: 0.4s;
+                                // -ms-transition: 0.4s;
+                                // -o-transition: 0.4s;
 }
                         }
                     }
