--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -262,7 +262,7 @@ header {
                 }
               }
               .display{
-                display: none;
+                display: block;
               }
 
               &:hover {
